--- a/NEWS
+++ b/NEWS
@@ -5,7 +5,7 @@ This file contains a list of user-visible changes.
 ===Version 0.3 (YYYY-MM-DD)===
 
 * Support Python 3.
-* Integrate Travis Continuous Integration.
+* Integrate Travis CI, Coveralls, and PyPI badges.
 * Generator fixes:
 ** Table of content generation fixed.
 ** I18n and l10n for Table of content header.
