--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@
 
 This file contains a list of user-visible changes.
 
-===Version 0.3 (YYYY-MM-DD)===
+===Version 0.3 (2013-11-23)===
 
 * Support Python 3.
 * Integrate Travis CI, Coveralls, and PyPI badges.
